--- a/packages/css/styles.css
+++ b/packages/css/styles.css
@@ -1337,3 +1337,27 @@ img {
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
+
+
+@media (max-width:768px){
+/*   styles for mobile view */
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
